--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,21 @@
 			<version>3.0.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	      	<groupId>org.springframework.boot</groupId>
+	      	<artifactId>spring-boot-configuration-processor</artifactId>
+	      	<optional>true</optional>
+      	</dependency>
+      	<dependency>
+	    	<groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-s3</artifactId>
+		    <version>1.12.780</version>
+		</dependency>
 	</dependencies>
 
 	<build>
